# grpc-web-client-server-example

client/: .gitignore  Cargo.toml  README.md  build.rs  index.html  main.css
client/proto/: test.proto
client/src/: main.rs
server/: Cargo.toml  README.md  build.rs
server/src/: main.rs  my_greeter.rs
