[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
tokio = { version = "1.21.2", features = ["macros", "rt"] }
web-sys = "0.3.60"

prost = "0.11.0"
tonic = { version = "0.8.2", default-features = false, features = [
    "prost",
    "codegen",
]}
tonic-web-wasm-client = { version = "0.2.2" }

[build-dependencies]
tonic-build = { version = "0.8.2", default-features = false, features = [
    "prost",
]}